<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/length_20"
        android:layout_marginLeft="@dimen/length_20"
        android:layout_marginRight="@dimen/length_20"
        android:layout_marginTop="@dimen/length_20"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/length_45" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/length_10"
                android:text="@string/TimeType" />

            <Spinner
                android:id="@+id/SpinnerRunJoker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/length_10"
                android:background="@null"
                android:entries="@array/runs" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/length_45"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/length_10"
                android:text="@string/Distance" />

            <EditText
                android:id="@+id/TimeEditText"
                android:layout_width="@dimen/length_80"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/length_10"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="5"
                android:text="500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/M" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <Button
            android:id="@+id/TimeStartBut"
            android:layout_width="@dimen/length_120"
            android:layout_height="@dimen/length_45"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/length_100"
            android:background="@drawable/button_style"
            android:text="@string/StartTime"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>