<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/length_20"
        android:layout_marginLeft="@dimen/length_20"
        android:layout_marginRight="@dimen/length_20"
        android:layout_marginTop="@dimen/length_20"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/length_40" >

            <TextView
                android:layout_width="@dimen/length_120"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16" />

            <Spinner
                android:id="@+id/SpinnerJoker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:entries="@array/languages" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/length_40" >

            <TextView
                android:layout_width="@dimen/length_120"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/allow"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16" />

            <Switch
                android:id="@+id/s_v"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textOff="关"
                android:textOn="开"
                android:thumb="@drawable/thumb"
                android:track="@drawable/track" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <Button
            android:id="@+id/DownloadEpc"
            android:layout_width="@dimen/length_160"
            android:layout_height="@dimen/length_30"
            android:layout_marginTop="@dimen/length_20"
            android:background="@drawable/button_style"
            android:text="@string/download"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/UploadEpc"
            android:layout_width="@dimen/length_160"
            android:layout_height="@dimen/length_30"
            android:layout_marginTop="@dimen/length_20"
            android:background="@drawable/button_style"
            android:text="@string/upload"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ScanEpc"
            android:layout_width="@dimen/length_160"
            android:layout_height="@dimen/length_30"
            android:layout_marginTop="@dimen/length_20"
            android:background="@drawable/button_style"
            android:text="检索EPC"
            android:textColor="@android:color/white" />

        <ListView
            android:id="@+id/SettingList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/length_10"
            android:divider="@color/gainsboro"
            android:dividerHeight="@dimen/length_1"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:smoothScrollbar="true" />
    </LinearLayout>

</LinearLayout>